<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdw_home"
    tools:context="com.biniyam.birthday_witch.Game">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="vertical">

            <TextView
                android:id="@+id/can_u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/can_u"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"

                android:elevation="5dp"

                app:cardCornerRadius="8dp"
                android:id="@+id/main"
                >
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/your_birth_date_is"
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="#fac838"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ans"
                        android:text=""
                        android:layout_gravity="center"
                        android:textSize="22sp"
                        android:textColor="#fac838"
                        />

                </LinearLayout>


                <Button
                    android:id="@+id/again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:text="@string/again"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"

                    android:elevation="5dp"

                    app:cardCornerRadius="8dp"
                    android:id="@+id/five"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp"
                        >
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_16_17_18_19"
                            android:layout_gravity="center"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_20_21_22_23"
                            android:layout_gravity="center"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_24_25_26_27"
                            android:layout_gravity="center"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_28_29_39_31"
                            android:layout_gravity="center"
                            android:textSize="23sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/four"
                    android:layout_gravity="center"


                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp"
                        >

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_8_9_10_11"
                            android:layout_gravity="center"
                            android:textSize="23sp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_12_13_14_15"
                            android:layout_gravity="center"
                            android:textSize="23sp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_24_25_26_27"
                            android:layout_gravity="center"
                            android:textSize="23sp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_28_29_30_31"
                            android:layout_gravity="center"
                            android:textSize="23sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="8dp"
                    android:layout_gravity="center"
                    android:id="@+id/tree"


                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp"
                        >

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_4_5_6_7"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_12_13_14_15"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_20_21_22_23"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_28_29_30_31"
                            android:textSize="23sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView> <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center"
                android:id="@+id/two"


                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    >


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/_2_3_6_7"
                        android:textSize="23sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/_10_11_14_15"
                        android:textSize="23sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/_18_19_22_23"
                        android:textSize="23sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/_26_27_30_31"
                        android:textSize="23sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/one"
                    android:layout_gravity="center"


                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp"
                        >



                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_1_3_5_7"
                            android:textSize="23sp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_9_11_13_15"
                            android:textSize="23sp" />
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_17_19_21_23"
                            android:textSize="23sp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/_25_27_29_31"
                            android:textSize="23sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="30dp"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/yes"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/no"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</FrameLayout>
